Update deployment volumes and logs

--- a/fastapi-logzio-otel/deployment.yaml
+++ b/fastapi-logzio-otel/deployment.yaml
@@ -30,28 +30,26 @@ spec:
           - name: LOG_PATH
             value: "/kapow/data/Logs/fastapi_app.log"
         volumeMounts:
-        - name: log-volume
-          mountPath: /kapow/data
-      initContainers:
-      - name: init-create-log-dir
-        image: busybox
-        command: ["mkdir", "-p", "/kapow/data/Logs"]
-        volumeMounts:
-        - name: log-volume
-          mountPath: /kapow/data
+          - name: logs
+            mountPath: /kapow/data/Logs
       volumes:
-      - name: log-volume
-        emptyDir: {}
+      - name: logs
+        hostPath:
+          path: /kapow/data/Logs
+          type: DirectoryOrCreate 
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: fastapi-app
   namespace: api
+  labels:
+    app: fastapi-app
+    component: backend
 spec:
   selector:
     app: fastapi-app
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 8000
+  - protocol: TCP
+    port: 80
+    targetPort: 8000
